Fix admin theming on Firefox.
Reviewed-on: https://code.drupalcommerce.org/396
Tested-by: Jenkins <jenkins@commerceguys.com>

--- a/modules/commerce_kickstart/commerce_backoffice/theme/commerce-backoffice-products.css
+++ b/modules/commerce_kickstart/commerce_backoffice/theme/commerce-backoffice-products.css
@@ -101,6 +101,10 @@
 .view-commerce-backoffice-products div.views-megarow-content {
   padding-top: 0;
 }
+.view-commerce-backoffice-products div.views-megarow-content #commerce-backoffice-product-quick-edit-form .form-item-price,
+.view-commerce-backoffice-products div.views-megarow-content .container-inline .form-item {
+  float: left;
+}
 .view-commerce-backoffice-products div.views-megarow-content .megarow-header {
   background: transparent url("images/mega-arrow.png") no-repeat 50px -1px;
   margin-top: -1px;
