--- a/themes/commerce_kickstart_admin/commerce_kickstart_admin.css
+++ b/themes/commerce_kickstart_admin/commerce_kickstart_admin.css
@@ -750,7 +750,7 @@ html.js fieldset.collapsed {
   height: 55px;
 }
 html.js input.form-autocomplete {
-  background-position: 100% 9px;
+  background-position: 100% 10px;
 }
 html.js input.throbbing {
   background-position: 100% -12px;
